# prefect-otel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
prefect_opentelemetry/: __init__.py  settings.py
tests/: conftest.py  test_integration.py  test_plugin.py  test_settings.py
